everything is done except for the extra credits

--- a/README
+++ b/README
@@ -2,6 +2,48 @@ jw76
 
 
 ============
+Assignment 6
+============
+This assignment starts from the step 1 of Assignment 5 (actually Assignment 4). The eagerEval() (valueValue() in Assignment 4) is renamed as eval(), while all other evaluation methods are removed. 
+
+lexer.java, Parser.java and other relevant interpreter classes:
+Added "letrec" for recursive-let support (limited to maps). The orginal "let" is now defined as non-recursive let. 
+
+Unshadow.java:
+Performs the unshadowing transformation. The visitor traverses the AST and returns a new unshadowed AST structure. It also transforms "&" and "|" into if-then-else constructs. 
+Note: At this time, the transformation of "&" and "|" is not done in the parser. So a program "map M,N to M & N" will be parsed as "map M,N to M & N" by the Parser class, but it will be converted to "map M:1,N:2 to map M:1,N:1 to if M:1 then N:1 else false" by the unshadowing transformation. 
+
+Cps.java:
+Performs the CPS transformation. The two private methods, convertCps(AST, AST) and convertRsh(AST), will convert Cps[k, M] and Rsh[S] to AST constructs respectively. The code is basically the interpretation of the definitions of Cps and Rsh in Java. 
+
+Sd.java:
+Performs the static-distance transformation. The visitor traverses the AST and returns a new AST in static-distance format. 
+
+
+
+============
+Assignment 5
+============
+This assignment is based on my previous assignments to support a typed Jam dialect. Most of the changes are made in the lexer and ther parser, as well as two new files TypeCheck.java and Type.java, while the other parts are mostly unchanged. 
+
+Type.java:
+Defined types: UnitType, IntType, BoolType, ListType, RefType, and ClosureType. 
+
+TypeCheck.java:
+The TypeVisitor will recursively traverse the ASTs, perform type-checking for each AST, and returns the returning type of each AST. There are also three auxiliary class (PrimFunTypeVisitor, UnOpTypeVisitor, and BinOpTypeVisitor), which help type-check the primitive function apps, unary-operator apps and binary-operator apps respectively. 
+
+Interpreter.java:
+Used eagerEval() and lazyEval() to replace the previous nine interpeter. Also added type check after context-sensitive check. 
+
+lexer.java and Parser.java:
+Modified to conform to the new typed syntax. Variable and NullConstant now have a Type attribute. 
+
+Assign5Test.java:
+More test cases are added. They are supposed to cover most of the cases in this assignment. Note that the test cases of previous assignments are removed due to compatibility issues. 
+
+
+
+============
 Assignment 4
 ============
 This assignment extends my solution of the previous assignment to support references and blocks. Most of the changes are made in the lexer and the parser to support the new operators and grammars. For the interpreter's part, new evaluation mechanisms are added, but they are quite simple and straightforward. 
