extra credit done

--- a/README
+++ b/README
@@ -4,20 +4,24 @@ jw76
 ============
 Assignment 6
 ============
-This assignment starts from the step 1 of Assignment 5 (actually Assignment 4). The eagerEval() (valueValue() in Assignment 4) is renamed as eval(), while all other evaluation methods are removed. 
+This assignment starts from the step 1 of Assignment 5. The eagerEval() (valueValue() in Assignment 4) is renamed as eval(), while all other evaluation methods are removed. 
 
 lexer.java, Parser.java and other relevant interpreter classes:
 Added "letrec" for recursive-let support (limited to maps). The orginal "let" is now defined as non-recursive let. 
+Also added "letcc" constructs for extra credit. 
 
 Unshadow.java:
 Performs the unshadowing transformation. The visitor traverses the AST and returns a new unshadowed AST structure. It also transforms "&" and "|" into if-then-else constructs. 
 Note: At this time, the transformation of "&" and "|" is not done in the parser. So a program "map M,N to M & N" will be parsed as "map M,N to M & N" by the Parser class, but it will be converted to "map M:1,N:2 to map M:1,N:1 to if M:1 then N:1 else false" by the unshadowing transformation. 
 
 Cps.java:
-Performs the CPS transformation. The two private methods, convertCps(AST, AST) and convertRsh(AST), will convert Cps[k, M] and Rsh[S] to AST constructs respectively. The code is basically the interpretation of the definitions of Cps and Rsh in Java. 
+Performs the CPS transformation. The transformation will start from a binary function mapping program Cps[map x to x, M0], where M0 is the unshadowed form of the given program. The two private methods, convertCps(AST, AST) and convertRsh(AST), will respectively convert Cps[k, M] and Rsh[S] to AST constructs recursively. The code is basically the step-by-step interpretation of the definitions of Cps and Rsh in Java. 
 
 Sd.java:
-Performs the static-distance transformation. The visitor traverses the AST and returns a new AST in static-distance format. 
+Performs the static-distance transformation. The visitor traverses the AST and returns a new AST in static-distance format. Also added new AST classes (SdLet, SdLetRec, SdLetcc, SdMap, SdVariable) to support static-distance format. 
+
+Assign6Test.java:
+More test cases are added. They are supposed to cover most of the cases in this assignment. 
 
 
 
